[package]
edition = "2021"
name = "thumbor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71" # 错误处理
axum = "0.6.18" # web 服务器
base64 = "0.21.2" # base64 编/解码
bytes = "1.4.0" # 处理字节流
image = "0.24.6" # 处理图片
lazy_static = "1.4.0" # 通过宏更方便的初始化静态变量
lru = "0.10.0" # LRU 缓存
percent-encoding = "2.2.0" # url 编/解码
photon-rs = "0.3.2" # 图像处理
prost = "0.11.9" # protobuf 处理
reqwest = "0.11.18" # HTTP 请求
# 序列化/反序列化数据
serde = {version = "1.0.163", features = ["derive"]}
# 异步处理
tokio = {version = "1.28.2", features = ["full"]}
# 服务处理及中间件
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
# http 中间件
tower-http = {version = "0.4.0", features = ["add-extension", "compression-full", "trace"]} 
tracing = "0.1.37" # 日志和追踪
tracing-subscriber = "0.3.17" # 日志和追踪

[build-dependencies]
prost-build = "0.11.9" # 编译 protobuf
